IMCMS-371 - Image crop and size: - Fixed image cropper movement.

--- a/src/main/webapp/css/image_editor/imcms-crop-area.css
+++ b/src/main/webapp/css/image_editor/imcms-crop-area.css
@@ -1,12 +1,11 @@
 .imcms-crop-area {
     overflow: hidden;
     position: absolute;
-    display: none;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 5;
+    z-index: 50;
 }
 
 .layout {
