--- a/src/main/webapp/css/image_editor/imcms-editable-img.css
+++ b/src/main/webapp/css/image_editor/imcms-editable-img.css
@@ -1,16 +1,18 @@
-.image-cropping-block,
 .imcms-editable-img-area {
     background-color: #9b9b9b;
     display: block;
     overflow: auto;
     position: relative;
+    z-index: 15;
     width: 100%;
     height: 100%;
-    z-index: 15;
 }
 
 .image-cropping-block {
-    display: none;
+    background-color: #9b9b9b;
+    overflow: auto;
+    position: absolute;
+    z-index: 10;
 }
 
 .imcms-editable-img {
@@ -20,14 +22,14 @@
     z-index: 20;
 }
 
-.image-cropping-block__layout {
+.image-cropping-wrap__layout {
     background: rgba(37, 34, 34, .5);
     position: absolute;
     min-width: 100%;
     min-height: 100%;
+    z-index: 30;
     top: 0;
     left: 0;
-    z-index: 30;
 }
 
 .imcms-preview-img-area {
@@ -35,21 +37,22 @@
     display: none;
     overflow: auto;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     z-index: 10;
 }
 
 .imcms-preview-img-container {
     overflow: hidden;
     position: absolute;
-    top: 0;
-    left: 0;
+    z-index: 10003;
+}
+
+.image-cropping-block,
+.imcms-preview-img-container,
+.imcms-preview-img-area {
     width: 100%;
     height: 100%;
-    z-index: 10003;
+    top: 0;
+    left: 0;
 }
 
 .imcms-preview-img {
